fix margin top on mobile logo

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -112,6 +112,7 @@ a {
         align-items: center;
         justify-content: center;
         align-content: center;
+        margin-top: 20px;
     }
 
     .navbar_links {
